# mottak

./: .bumpversion.cfg  .flake8  .gitignore  README.md  azure-pipelines.yml
arkiv-downloader/: .env.default  Dockerfile  README.md  docker-compose.yml  pyproject.toml
arkiv-downloader/arkiv_downloader/: main.py
arkiv-downloader/arkiv_downloader/models/: dto.py
arkiv-downloader/on_prem_setup_scripts/: export-arkiv-downloader-envvars.sh  run_arkiv_downloader.sh  unset-arkiv-downloader-envvars.sh
arkiv-downloader/tests/: conftest.py  test_arkiv_downloader.py  test_dto.py  test_main.py
mailer/: .env.default  Dockerfile  README.md  _version.py  mailer.py  pyproject.toml  start.sh
mottak-arkiv-service/: .env.default  Dockerfile  README.md  alembic.ini  generate-model.py  pyproject.toml
mottak-arkiv-service/alembic/: README  env.py
mottak-arkiv-service/alembic/versions/: 19ac377e3a40_create_arkivkopi_table.py  19ac377e3a40_create_transfer_request_table.py  412b6ec6c2be_rename_column_name_in_overforingspakke.py  45a842b264e5_add_new_arkivkopi_status.py  bff48d665557_refactor_overforingspakke_table.py  de67cf03b895_intial_database_creation.py  e357ec7f4036_intial_database_creation.py  ee70a0e9cb7b_refactor_arkivkopi_table.py  f0ecc7d899bf_intial_database_creation.py  f2d569907a5c_add_column_filnavn_to_arkivkopi.py
mottak-arkiv-service/app/: dependencies.py  exceptions.py  main.py  utils.py
mottak-arkiv-service/app/connectors/: InvitasjonMelding.py  connectors_variables.py  mailgun_client.py
mottak-arkiv-service/app/connectors/arkiv_downloader/: models.py
mottak-arkiv-service/app/connectors/azure_servicebus/: azure_servicebus_client.py  models.py  utils.py
mottak-arkiv-service/app/connectors/mailgun/: mailgun_client.py  models.py
mottak-arkiv-service/app/connectors/sas_generator/: models.py  sas_generator_client.py
mottak-arkiv-service/app/database/: repository.py  session.py
mottak-arkiv-service/app/database/dbo/: baseclass.py  mottak.py
mottak-arkiv-service/app/database/mappers/: metadatafil.py
mottak-arkiv-service/app/database/repositories/: arkivkopi_repository.py  arkivuttrekk_repository.py  invitasjon_repository.py  metadatafil_repository.py  overforingspakke_repository.py
mottak-arkiv-service/app/db/: __init__.py  baseclass.py  database.py  repository.py
mottak-arkiv-service/app/db/dbo/: mottak.py
mottak-arkiv-service/app/db/schemas/: mottak.py
mottak-arkiv-service/app/domain/: arkivuttrekk_service.py  metadatafil_service.py  metadatafilservice.py  routerservice.py  xmlparser.py
mottak-arkiv-service/app/domain/mappers/: arkivuttrekk.py  metadatafil.py
mottak-arkiv-service/app/domain/models/: Arkivkopi.py  Arkivuttrekk.py  Bestilling.py  Invitasjon.py  Metadata.py  Metadatafil.py  metadatafil.py
mottak-arkiv-service/app/dto/: Arkivuttrekk.py  Metadatafil.py  __init__.py
mottak-arkiv-service/app/jobs/: schedule_status_receiver_job.py
mottak-arkiv-service/app/routers/: arkivuttrekk.py  metadatafil.py  router_dependencies.py
mottak-arkiv-service/app/routers/dto/: Arkivkopi.py  Arkivuttrekk.py  Invitasjon.py  Metadata.py  Metadatafil.py  SASToken.py
mottak-arkiv-service/app/routers/mappers/: arkivuttrekk.py  metadafil.py
mottak-arkiv-service/app/routers/services/: metadatafil_service.py
mottak-arkiv-service/app/services/: routerservice.py
mottak-arkiv-service/app/services/domain/: metadatafil.py
mottak-arkiv-service/tests/: common_fixtures.py  conftest.py  test_main.py
mottak-arkiv-service/tests/connectors/arkiv_downloader/: test_models.py
mottak-arkiv-service/tests/connectors/mailgun/: test_models.py
mottak-arkiv-service/tests/connectors/sas_generator/: test_models.py
mottak-arkiv-service/tests/database/mappers/: test_metadatafil.py
mottak-arkiv-service/tests/domain/: test_routerservices.py  test_xmlparser.py
mottak-arkiv-service/tests/domain/mappers/: test_arkivuttrekk.py  test_metadatafil.py
mottak-arkiv-service/tests/domain/models/: test_Arkivkopi.py  test_Invitasjon.py  test_Metadatafil.py  test_metadatafil.py
mottak-arkiv-service/tests/routers/dto/: test_Arkivuttrekk.py  test_Metadata.py
mottak-arkiv-service/tests/routers/mappers/: test_metadatafil.py
mottak-arkiv-service/tests/services/: test_routerservices.py
mottak-arkiv-service/tests/testdata/: metadatafil1.xml  metadatafil1_errors.xml
s3-delete/: .env.default  README.md  _version.py  pyproject.toml  s3-delete.py
s3-scan-tar/: .env.default  .gitignore  Dockerfile  README.md  _version.py  models.py  pyproject.toml  s3-scan-tar.py  scanner.py  start.sh
s3-scan-tar/app/: blob.py  models.py  scanner.py  utils.py
s3-scan-tar/conf/: clamd.conf
s3-scan-tar/tests/: test_models.py  test_scanner.py
s3-scan-tar/tests/azurite/: azurite_upload.py
s3-unpack/: .dockerignore  .env.default  Dockerfile  README.md  _version.py  entrypoint.sh  pyproject.toml  s3-unpack.py
s3-unpack/app/: abs.py  blob.py  exitcodes.py  s3-unpack.py  utils.py
s3-unpack/tests/azurerite/: azurerite_upload.py
storage-sas-generator/: Dockerfile  README.md  pyproject.toml
storage-sas-generator/app/: constants.py  main.py
storage-sas-generator/app/model/: dto.py  global_state.py
storage-sas-generator/tests/: test_main.py
tusd/: .dockerignore  .env.default  Dockerfile  README.md  argo-mottak-DAG.yaml  pyproject.toml  start.sh  test_hooks.py  tusdhooks.py
tusd/hooks/: README.md  hooks_utils.py  post-create  post-finish  post_finish.py  pre-create  pre_create.py
tusd/hooks/implementations/: error_codes.py  hooks_utils.py  post_create.py  post_finish.py  pre_create.py  return_codes.py  status.py
tusd/hooks/implementations/models/: DataFromDatabase.py  (+1 more)
tusd/hooks/models/: DataFromDatabase.py  HookData.py
tusd/tests/: test_hooks.py  test_hooks_executable.py  test_hooks_utils.py  test_post_create.py  test_post_finish.py
tusd/tests/demo-data/: post-finish.json  post-receive.json  pre-create.json
tusd/tests/models/: test_DataFromDatabase.py  test_HookData.py
tusd/tests/tus-uploader/: README.md  tus-uoploader.py  tus-uploader.py
tusd/tusd-hooks/: pre-create
(+219 files in other folders)
