[tool.poetry]
name = "arkiv-downloader"
version = "0.1.0"
description = ""
authors = ["Kristoffer Waløen <kriwal@arkivverket.no>"]

[tool.poetry.dependencies]
python = "^3.8"
azure-servicebus = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
python-dotenv = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
