[tool.poetry]
name = "mottak-arkiv-service"
version = "0.1.0"
description = "Container for running the backend service for mottak-arkiv application."
authors = ["Mårten Elmgren <elmgren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
alembic = "^1.4.2"
psycopg2 = "^2.8.6"
httpx = "^0.16.1"
azure-servicebus = "^0.50.3"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
python-dotenv = "^0.15.0"
autopep8 = "^1.5.3"
sqlalchemy_schemadisplay = "^1.3"
psycopg2-binary = "^2.8.6"
pytest = "^6.2.1"
requests = "^2.23.0"
pytest-mock = "^3.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
