[tool.poetry]
name = "s3-delete"
version = "0.1.0"
description = "Container deleteing object within Argo workflows."
authors = ["Per Buer <per.buer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-objectstore = { git = "https://github.com/arkivverket/py-objectstore.git" }

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
