[tool.poetry]
name = "s3-scan-tar"
version = "0.1.0"
description = "Container for clamav scanning objectstore objects."
authors = ["Per Buer <per.buer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyClamd = "^0.4.0"
azure-storage-blob = "^12.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
python-dotenv = "^0.15.0"
autopep8 = "^1.5.6"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
