[tool.poetry]
name = "s3-scan-tar"
version = "0.1.0"
description = "Container for clamav scanning objectstore objects."
authors = ["Per Buer <per.buer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyClamd = "^0.4.0"
azure-storage-blob = "^12.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
python-dotenv = "^0.17.0"
autopep8 = "^1.5.6"
pytest = "^6.2.3"
pytest-cov = "^2.10.1"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
